fixed form styling issue
fixed issue where input boxes were overflowing the form, making them bigger than surrounding elements

--- a/frontend/styles/forms.css
+++ b/frontend/styles/forms.css
@@ -5,15 +5,16 @@ form {
     max-width: 20rem;
 }
 
-.from-group {
+.form-group {
     position: relative;
-    margin-bottom: 1.5rem;
+    margin-bottom: 0.5rem;
 }
 
 input,
 select,
 textarea {
     width: 100%;
+    box-sizing: border-box;
     padding: 0.6rem;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -51,6 +52,7 @@ textarea + label {
 }
 
 input:focus + label,
+select:focus + label,
 textarea:focus + label{
     color: #41b564;
 }
